--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "homepage": "http://code.gogulski.com.",
     "license": "UNLICENSE",
     "authors": [
-        {"name": "mikegogulski", "email": ""}
+		{"name": "yajiedesign", "email": "yajiedesign@gmail.com"}
     ],
     "require": {
         "php": ">=5.3.2"
