--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "yajiedesign/bitcoin-php",
-    "type": "library",
-    "description": "A Bitcoin library for PHP.",
-    "keywords": ["bitcoin", "php"],
-	"version": "1.0.4",
-    "homepage": "http://code.gogulski.com.",
-    "license": "UNLICENSE",
-    "authors": [
-		{"name": "yajiedesign", "email": "yajiedesign@gmail.com"}
-    ],
-    "require": {
-        "php": ">=5.3.2"
-    },
-    "autoload": {
-        "psr-0": { "bitcoin\\bitcoinphp": "src/" }
-    }
+  "name": "bluedroplet/bitcoin-php",
+  "type": "library",
+  "description": "A Bitcoin library for PHP.",
+  "keywords": ["bitcoin", "php"],
+  "homepage": "https://github.com/bluedroplet/bitcoin-php",
+  "license": "UNLICENSE",
+  "authors": [
+    {"name": "Jonathan Brown", "email": "jbrown@bluedroplet.com"},
+    {"name": "yajiedesign", "email": "yajiedesign@gmail.com"}
+  ],
+  "require": {
+    "php": ">=5.3.2"
+  },
+  "autoload": {
+    "psr-0": { "bitcoin\\bitcoinphp": "src/" }
+  }
 }
